GradientController spec. Extract GradientController and Scheduler internal configs into dedicated messages GradientParameters and SchedulerParameters to avoid re-defintion of config in GradientController. Other misc fixes.
